@@ -4,6 +4,9 @@ qtlocation-opensource-src (5.15.1+dfsg-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Bump Qt build-dependencies to 5.15.1.
   * Drop gcc10.diff, included in the new release.
+  * Update to debhelper compat level 13.
+    - Drop dh_missing override, --fail-missing is now default behavior.
+    - Stop exporting $HOME for tests, debhelper now does that itself.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 09 Sep 2020 21:15:10 +0300
 
